[package]
name = "karla_table_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
serde_json = "~1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = ">=0.4.23", default-features = false, features = ["serde"] }
# clap
clap = { version = "~4", features = ["derive"] }
log = "~0.4"